--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,53 @@
+body {
+	background-color: #FFFFFF;
+	color: #000000;
+	font-family: Arial;
+	font-weight: normal;
+	font-size: 13px;
+	line-height: 1.1875;
+	margin: 0;
+	padding: 0;
+}
+
+
+li {
+    list-style: none;
+}
+
+.form-wrapper {
+    border-radius: 10px;
+}
+
+.form-wrapper label {
+    font-weight: bold;
+}
+
+.errors li {
+    list-style: none;
+    width: 100%;
+    text-align: center;
+}
+
+.errors ul {
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+    .form-wrapper .text-right {
+        text-align: center !important;
+    }
+}
+
+.reglogBackground {
+    background-image: url(http://localhost/assets/img/logreg/logreg.jpg);
+    background-size: cover;
+}
+
+.reglogpanel {
+    background-color: #100c28b3;
+}
+
 #PageHeader>.row>.col-1 {
     background-color: transparent;
     background-image: none;
@@ -32,27 +82,7 @@
     padding: 0;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 100px auto;
-    grid-template-areas: "basbar basbar basbar basbar" "soltaraf ortataraf ortataraf sagtaraf";
-}
-
-#FlexGrid1 .basbar {
-    display: flex;
-    grid-area: basbar;
-    background-image: url(http://localhost/assets/img/logreg/headerbar.png);
-    background-size: cover;
-    border: 0px solid #FFFFFF;
-    border-radius: 0px;
-    padding: 0;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-align-items: flex-start;
-    align-items: flex-start;
-    -webkit-align-content: flex-start;
-    align-content: flex-start;
+    grid-template-areas: "soltaraf ortataraf ortataraf sagtaraf";
 }
 
 #FlexGrid1 .soltaraf {
