--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+.anibody {
+  font-family: Montserrat,Arial;
+  color: black;
+  font-size: 14px;
+  line-height: 1.3em;
+  font-weight: 400;
+  -webkit-text-size-adjust: none;
+}
+
+
 #main-content {
   width: 100%;
   float: right;
@@ -43,6 +53,7 @@
 
 .film_list .film_list-wrap {
   list-style: none;
+  padding-left: 10px;
 }
 
 .flw-item .film-poster .film-poster-ahref {
@@ -216,3 +227,329 @@ a {
 *, ::after, ::before {
   box-sizing: border-box;
 }
+
+
+#ani_detail .ani_detail-stage {
+  width: 100%;
+  background: #2a2c31;
+  display: inline-block;
+  position: relative;
+  padding-left: 100px;
+}
+
+
+#ani_detail .anis-content {
+  padding: 95px 0% 0px 0;
+}
+
+.anis-content {
+  position: relative;
+}
+
+.anis-cover {
+  position: fixed;
+  top: -20px;
+  left: -20px;
+  right: -20px;
+  bottom: -20px;
+  background-size: cover;
+  background-position: center center;
+}
+
+
+.anis-content .anisc-poster {
+  width: 230px;
+  position: relative;
+  top: 85px;
+  left: 25px;
+  box-shadow: 0 40px 40px rgba(0,0,0,.2);
+}
+
+
+
+.anis-content .anisc-detail {
+padding-left: 270px;
+position: absolute;
+padding-top: 110px;
+
+}
+
+.anis-content .anisc-info-wrap {
+position: absolute;
+top: 117px;
+right: 41px;
+bottom: -155px;
+width: calc(29%);
+background: rgba(255,255,255,.1);
+overflow: hidden;
+}
+
+
+
+.film-poster {
+  width: 100%;
+  padding-bottom: 148%;
+  position: relative;
+  overflow: hidden;
+}
+
+.block_area, .film-poster, .nav-item, .nav-item > a, .search-content input.search-input {
+  position: relative;
+}
+
+.film-poster .film-poster-img, .item-cover-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.film-poster-ahref i, .film-poster-ahref::after, .film-poster-ahref::before, .film-poster-img, .trending-list {
+  transition: all .5s ease 0s;
+  -webkit-transition: all .5s ease 0s;
+  -moz-transition: all .5s ease 0s;
+}
+
+#ani_detail .prebreadcrumb {
+  margin: 0;
+  font-size: 12px;
+  color: #ddd;
+}
+.prebreadcrumb {
+  margin-top: 15px;
+  margin-bottom: 22px;
+}
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+  display: block;
+}
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+#ani_detail .prebreadcrumb {
+  font-size: 12px;
+  color: #ddd;
+}
+
+.prebreadcrumb .breadcrumb {
+  padding: 0;
+  background: 0 0;
+}
+.breadcrumb {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: .75rem 1rem;
+  margin-bottom: 1rem;
+  list-style: none;
+  background-color: #e9ecef;
+  border-radius: .25rem;
+}
+dl, ol, ul {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+#ani_detail .prebreadcrumb {
+  font-size: 12px;
+  color: #ddd;
+}
+
+.breadcrumb-item {
+  line-height: 1.4em;
+  margin-bottom: 3px;
+}
+
+.breadcrumb-item + .breadcrumb-item {
+  padding-left: .5rem;
+}
+
+.breadcrumb-item + .breadcrumb-item::before, .breadcrumb-item.active {
+  color: #aaa;
+}
+
+.breadcrumb-item.active {
+  color: #6c757d;
+}
+
+.breadcrumb-item + .breadcrumb-item {
+  padding-left: .5rem;
+}
+
+.breadcrumb-item {
+  line-height: 1.4em;
+  margin-bottom: 3px;
+}
+
+.anis-content .anisc-detail .film-name {
+  font-size: 40px;
+}
+
+.anis-content .anisc-detail .film-stats {
+  margin-bottom: 30px;
+  font-size: 13px;
+}
+
+
+.anis-content .anisc-detail .film-stats .item .tick-item {
+  background: 0 0 !important;
+  color: #fff !important;
+  border: 1px solid #fff !important;
+  line-height: 1em;
+}
+
+.tick-item.tick-quality {
+  background: #ffdd95 !important;
+  color: #111 !important;
+}
+
+.anis-content .anisc-detail .film-buttons {
+  margin-bottom: 30px;
+}
+
+.anis-content .anisc-detail .film-buttons .btn {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 10px;
+  box-shadow: none !important;
+}
+
+.btn-focus, .btn-primary, .btn-tab.active {
+  background: #faa300 !important;
+  color: #111 !important;
+  border-color: #faa300 !important;
+}
+
+.btn-radius {
+  border-radius: 30px;
+}
+
+.btn, button {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.anis-content .anisc-detail .film-buttons .dr-fav {
+  position: relative;
+  display: inline-block;
+}
+
+
+.anis-content .anisc-detail .film-description {
+  margin-bottom: 0;
+}
+
+.anis-content .anisc-detail .film-description .text {
+  font-weight: 300;
+  line-height: 1.5em;
+  font-size: 13px;
+}
+
+
+.anis-content .anisc-detail .film-text, .anisc-info .film-text {
+  font-weight: 300;
+  line-height: 1.5em;
+  margin-top: 15px;
+  margin-bottom: 0;
+  font-size: 13px;
+}
+
+.share-buttons.share-buttons-min {
+  margin-bottom: 0;
+}
+.share-buttons {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.mt-3, .my-3 {
+  margin-top: 1rem !important;
+}
+
+.share-buttons .share-buttons-block {
+  padding: 20px 0;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.share-buttons .share-buttons-block .share-icon {
+  display: none;
+}
+
+.share-icon {
+  width: 100px;
+  height: 100px;
+}
+.share-icon {
+  background-image: url("../images/share-icon.gif");
+  left: -10px;
+  width: 80px;
+  height: 80px;
+}
+.dub-icon, .share-icon {
+  background-image: url("../images/dub-icon.png");
+  background-size: cover;
+  background-position: center center;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  left: -15px;
+  bottom: 0;
+}
+
+.share-buttons .share-buttons-block .sbb-title {
+  display: block;
+  font-size: 12px;
+  float: left;
+  padding: 2px 0 2px 20px;
+  border-left: 2px solid #faa300;
+  margin-right: 20px;
+  position: relative;
+}
+
+.share-buttons .share-buttons-block .addthis_inline_share_toolbox {
+  float: left;
+  clear: none !important;
+}
+
+.anis-content .anisc-info {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  max-height: 90%;
+  overflow: auto;
+  left: 30px;
+  bottom: auto;
+  right: 30px;
+}
+
+.anis-content .anisc-info .item {
+  margin-bottom: 10px;
+  line-height: 1.4em;
+  font-size: 13px;
+}
+
+.anis-content .anisc-info .item .item-head {
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-right: 5px;
+}
+
+.anis-content .anisc-info .item-list {
+  padding: 10px 0 5px;
+  border-top: 1px solid rgba(255,255,255,.1);
+  border-bottom: 1px solid rgba(255,255,255,.1);
+}
+
+
+
+
+
+
+
